# breach-web-scraper

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
breach_scraper/: __init__.py  cli.py  http.py  output.py  registry.py  wa_atg_scraper.py
breach_scraper/sources/: __init__.py  ca_oag.py  hhs_ocr.py  maine_ag.py  or_doj.py  wa_atg.py
scraper/: wa_atg_scraper.py
tests/: test_ca_oag.py  test_cli.py  test_hhs_ocr.py  test_http.py  test_maine_ag.py  test_or_doj.py  test_output.py  test_wa_atg.py  test_wa_atg_scraper.py
tests/fixtures/: wa_atg_sample.html
